# mini-wiki

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  README.zh.md  SKILL.md  mini-wiki.skill  pyproject.toml  wiki-generator.skill
.github/workflows/: ci.yml
docs/: mini-wiki-article.md
plugins/: _registry.yaml
plugins/agent-skills-main/: PLUGIN.md
plugins/api-doc-enhancer/: PLUGIN.md
plugins/diagram-plus/: PLUGIN.md
plugins/docusaurus-exporter/: PLUGIN.md
plugins/gitbook-exporter/: PLUGIN.md
plugins/paper-drafter/: PLUGIN.md
plugins/patent-generator/: PLUGIN.md
plugins/repo-analytics/: PLUGIN.md
references/: SKILL.zh.md  plugin-template.md  prompts.md  templates.md
scripts/: analyze_project.py  check_quality.py  cli.py  detect_changes.py  extract_docs.py  generate_diagram.py  generate_toc.py  init_wiki.py  plugin_manager.py
tests/: __init__.py  conftest.py  test_analyze_project.py  test_check_quality.py  test_cli.py  test_detect_changes.py  test_extract_docs.py  test_generate_diagram.py  test_generate_toc.py  test_init_wiki.py  test_plugin_manager.py
